--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Module 2 Solution</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <h1>Our Menu</h1>
+    <div class="container">
+        <div class="heading">Chicken</div>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus eos iste obcaecati modi incidunt eveniet rem mollitia voluptas esse, molestiae temporibus quaerat praesentium.
+    </div>
+    <div class="container">
+        <div class="heading">Beef</div>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, odio molestiae, magnam unde aliquam debitis maiores, tenetur non aspernatur sint maxime incidunt blanditiis!
+    </div>
+    <div class="container">
+        <div class="heading">Sushi</div>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi hic quos accusantium earum, praesentium nisi, fuga labore ipsum voluptatum natus error quisquam non?
+    </div>
+</body>
+</html>
