Updating index.html

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +8,29 @@
     <title>Module 2 Solution</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <h1>Our Menu</h1>
-    <div class="container">
-        <div class="heading">Chicken</div>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus eos iste obcaecati modi incidunt eveniet rem mollitia voluptas esse, molestiae temporibus quaerat praesentium.
-    </div>
-    <div class="container">
-        <div class="heading">Beef</div>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, odio molestiae, magnam unde aliquam debitis maiores, tenetur non aspernatur sint maxime incidunt blanditiis!
-    </div>
-    <div class="container">
-        <div class="heading">Sushi</div>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi hic quos accusantium earum, praesentium nisi, fuga labore ipsum voluptatum natus error quisquam non?
+    <div class="main">
+        <div class="container">
+            <div class="heading heading1">Chicken</div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga voluptatem repellat ad tempora est. Quos atque repellendus enim odio dolorem vero ipsum animi corrupti officiis? Repellendus architecto facere cumque excepturi molestiae!</p>
+        </div>
+        <div class="container">
+            <div class="heading heading2">Beef</div>
+            <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, odio molestiae, magnam unde aliquam debitis
+            maiores, tenetur non aspernatur sint maxime incidunt blanditiis!
+        </p>
+        </div>
+        <div class="container-2">
+            <div class="heading heading3">Sushi</div>
+            <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi hic quos accusantium earum, praesentium
+            nisi, fuga labore ipsum voluptatum natus error quisquam non?
+        </p>
+        </div>
     </div>
 </body>
+
 </html>
